[gd_scene format=3 uid="uid://bvq7y8xtm5pfw"]

[ext_resource type="Script" path="res://scripts/debug/debug_cinema_grade_overlay.gd" id="1_cinema"]

[node name="SC_CinemaDebugOverlay" type="CanvasLayer"]
layer = 128
script = ExtResource("1_cinema")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Cinema Grade Debug (F4 to toggle)"
horizontal_alignment = 1

[node name="SceneLabel" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Scene: (loading...)"

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FilterGroup" type="VBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="FilterLabel" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/FilterGroup"]
layout_mode = 2
text = "Filter Preset"

[node name="FilterPresetOption" type="OptionButton" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/FilterGroup"]
unique_name_in_owner = true
layout_mode = 2

[node name="FilterIntensityGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/FilterIntensityGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Filter Intensity"

[node name="FilterIntensitySlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/FilterIntensityGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="FilterIntensitySpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/FilterIntensityGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ExposureGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ExposureGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Exposure"

[node name="ExposureSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ExposureGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -3.0
max_value = 3.0
step = 0.01

[node name="ExposureSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ExposureGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -3.0
max_value = 3.0
step = 0.01

[node name="BrightnessGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrightnessGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrightnessGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="BrightnessSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrightnessGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="ContrastGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ContrastGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Contrast"

[node name="ContrastSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ContrastGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 3.0
step = 0.01
value = 1.0

[node name="ContrastSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ContrastGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 0.0
max_value = 3.0
step = 0.01
value = 1.0

[node name="BrillianceGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrillianceGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Brilliance"

[node name="BrillianceSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrillianceGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="BrillianceSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/BrillianceGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="HighlightsGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/HighlightsGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Highlights"

[node name="HighlightsSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/HighlightsGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="HighlightsSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/HighlightsGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="ShadowsGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ShadowsGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Shadows"

[node name="ShadowsSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ShadowsGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="ShadowsSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ShadowsGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="SaturationGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SaturationGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Saturation"

[node name="SaturationSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SaturationGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 3.0
step = 0.01
value = 1.0

[node name="SaturationSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SaturationGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 0.0
max_value = 3.0
step = 0.01
value = 1.0

[node name="VibranceGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/VibranceGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Vibrance"

[node name="VibranceSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/VibranceGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="VibranceSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/VibranceGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="WarmthGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/WarmthGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Warmth"

[node name="WarmthSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/WarmthGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="WarmthSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/WarmthGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="TintGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/TintGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Tint"

[node name="TintSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/TintGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="TintSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/TintGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.01

[node name="SharpnessGroup" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SharpnessGroup"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Sharpness"

[node name="SharpnessSlider" type="HSlider" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SharpnessGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 2.0
step = 0.01

[node name="SharpnessSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/SharpnessGroup"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = 0.0
max_value = 2.0
step = 0.01

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Scene Defaults"

[node name="ExportButton" type="Button" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Export to Console"

[node name="HelpLabel" type="Label" parent="MarginContainer/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Adjust values, then click Export to print .tres format"
horizontal_alignment = 1
autowrap_mode = 3
